--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "@linaria/babel-preset": "^4.3.3",
     "@linaria/core": "^4.2.5",
     "@linaria/react": "^4.3.3",
+    "@prisma/client": "^4.10.1",
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/marked": "^4.0.8",
-    "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@uiw/react-markdown-preview": "^4.1.7",
     "destyle": "^1.1.4",
     "destyle.css": "^4.0.0",
     "easymde": "^2.18.0",
@@ -28,7 +29,6 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
     "react-simplemde-editor": "^5.2.0",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,5 +54,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.13.0",
+    "prisma": "^4.10.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
