--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@lexical/react": "^0.7.6",
     "@linaria/babel-preset": "^4.3.3",
     "@linaria/core": "^4.2.5",
     "@linaria/react": "^4.3.3",
-    "@prisma/client": "^4.10.1",
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,13 +18,13 @@
     "destyle": "^1.1.4",
     "destyle.css": "^4.0.0",
     "easymde": "v2.16.0",
-    "lexical": "^0.7.6",
+    "github-markdown-css": "^5.2.0",
     "marked": "^4.2.12",
     "mysql2": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-simplemde-editor": "v5.1.0",
     "web-vitals": "^2.1.4"
@@ -57,7 +55,6 @@
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
-    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
