--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
     "react-simplemde-editor": "v5.1.0",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
